capstone_amaka_cf.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create an EC2 instance

Parameters:
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t2.medium
    ConstraintDescription: Must be a valid EC2 instance type.
    
  PolyKeyPair:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.

Resources:
  PolyEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: 
        Fn::FindInMap:
          - RegionMap
          - Ref: 'AWS::Region'
          - AMI
      KeyName: !Ref PolyKeyPair
      SecurityGroupIds: 
        - !Ref PolySecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update -y
          apt-get install -y nginx
          systemctl start nginx
          systemctl enable nginx
          apt-get install -y nodejs
          apt-get install npm
          apt-get install git

  PolySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access via port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-04a81a99f5ec58529
